test/fixtures/diagnostics/type-checker/positive/composition-function-type-annotation-compatibility/input.tysh
namespace Samples.TypeChecker.CompositionFunctionTypeAnnotationCompatibility

fun increment(value: int): int = value + 1

fun stringify(value: int): string = value.ToString()

fun length(value: string): int = value.Length

fun identity<T>(value: T): T = value

let incrementThenString: int -> string = increment >> stringify
let stringLengthAfterStringify: int -> int = stringify >> length
let reverseIncrementThenString: int -> string = stringify << increment
let identityBeforeStringify: int -> string = identity >> stringify
let stringifyBeforeIdentity: int -> string = stringify >> identity
