test/fixtures/diagnostics/type-checker/negative/dynamic-call-capability-required/input.tysh
namespace Samples.DynamicCallCapability.Negative

dynamic fun readLegacy(value: dynamic): string =
  value.ToString()

fun missingDirect(value: string): string =
  readLegacy(value)

fun missingPipeline(value: string): string =
  value |> readLegacy

dynamic fun allowed(value: dynamic): string =
  readLegacy(value)
